# signal-room

./: .gitignore  Makefile  README.md  curious-endeavor-signal-room-goal.md  curious-endeavor-signal-room-prd.md  pyproject.toml  render.yaml  setup.py
config/: discovery_queries.json  gdelt_backend.json  last30days_backend.json  pillar_keywords.json  scoring_weights.json  seed_sources.json  source_feedback_weights.json
config/plans/: ai-security-funding-launches.json  brand-chatbot-incidents.json  eu-ai-act-enforcement.json  frontier-model-red-team.json
docs/brainstorms/: dig-deeper-fractal-search-requirements.md
docs/plans/: 2026-05-13-001-feat-signal-room-v1-1-brief-driven-plan.md  2026-05-13-002-feat-gdelt-fetcher-plan.md  2026-05-13-003-feat-alice-ce-render-deployments-plan.md  2026-05-13-004-feat-brand-onboarding-editor-and-pages-plan.md  2026-05-13-integrate-gdelt-source.md
fixtures/: gdelt_sample.json  sample_items.json
scripts/: admin_brands.py  bootstrap_gdelt_pillars_from_alice.py  dig_deeper_lens_prototype.py  render-build.sh  rescore.py  social_query_preview_poc.py
signal_room/: __init__.py  auth.py  cli.py  digest.py  discovery_store.py  ingest.py  llm_scoring.py  models.py  onboarding.py  pipeline.py  planner.py  query_lab.py  render_trace.py  scoring.py  storage.py  title_enrichment.py  tracer.py  traction.py  web.py  web_store.py  worker.py
tests/: test_bootstrap_gdelt_pillars.py  test_discovery_store.py  test_fetchers_gdelt.py  test_fetchers_gdelt_live.py  test_title_enrichment.py  test_traction.py  test_traction_ui.py
(+25 files in other folders)
